# point2building

./: README.md  pyproject.toml  requirements.txt  streamlit_app.py
src/: __init__.py
src/modules/: __init__.py  polygen_decoder.py  polygen_encoder.py
src/utils/: __init__.py  geometry_io.py
