[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "point2building"
version = "0.1.0"
description = "Point2Building: reconstructing buildings from airborne LiDAR point clouds"
readme = "README.md"
requires-python = ">=3.8,<3.11"
dependencies = [
  "networkx==2.6.3",
  "numpy==1.21.6",
  "pytorch_lightning==1.9.4",
  "plotly==5.24.1",
  "scipy==1.7.3",
  "Shapely==2.0.5",
  "streamlit==1.39.0",
  "torch==2.0.1+cu118",
  "tqdm==4.65.0",
  "warmup-scheduler==0.3",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
